# semantic-kernel-agent-factory

./: .gitignore  Makefile  README.md  dev-requirements.txt  pyproject.toml  pytest.ini  requirements.txt  setup-dev.sh  test-requirements.txt  test_app_cache.py  test_basic_cache.py  test_cache_logic.py
.github/workflows/: python-package.yml  python-publish.yml
agent_factory/: __init__.py  _version.py  config.py  factory.py
agent_factory/cli/: commands.py
agent_factory/console/: __init__.py  app.py  chat_service.py  commands.py  constants.py  history_config.py  json_formatter.py  models.py  styles.tcss  utils.py  widgets.py
agent_factory/mcp_server/: provider.py
agent_factory/service/: __init__.py
examples/: agent_service_factory_config.yaml  cli_example.yaml  handoff_example.yaml  web_service.py
tests/: test_azure_ad_config.py  test_cli.py  test_config.py  test_credential_cache.py  test_executor.py  test_factory.py  test_function_events.py  test_integration.py  test_mcp_config.py  test_mcp_provider.py  test_schema_validator.py  test_service_factory.py
